Giving final touch to the project adding logic to the next button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="options"></div>
   <div id="score"></div>
   <div id="btn">
-    <button id="next">Next...</button>
+    <button id="next">Skip..</button>
   </div>
   <script src="quiz.js"></script>
 </body>
